# carbon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  carbon.sln  carbon.vcxproj  carbon.vcxproj.filters  compile_commands.json  generated_macros.hpp  testj.txt
carbon/: carbon.vcxproj  carbon.vcxproj.filters  test.txt
carbon/include/: carbon.hpp
carbon/include/carbon/: members.hpp  proxies.hpp  serializer.hpp
carbon/include/carbon/detail/: copy_one.hpp  memory_proxies.hpp  meta.hpp  nargs_macro.hpp  serialization_tag.hpp  stream_proxies.hpp
carbon/test/: main.cpp
include/: carbon.hpp
include/carbon/: archive_base.hpp  members.hpp  memory_archive.hpp  proxies.hpp  serializer.hpp  stream_archive.hpp  unchecked_memory_archive.hpp
include/carbon/archives/: json.hpp
include/carbon/detail/: archived_value_t.hpp  binary_archive.hpp  config.hpp  copy_dispatch.hpp  copy_one.hpp  fields_count.hpp  generated_macros.hpp  generated_type_to_tuple.hpp  members_list.hpp  memory_proxies.hpp  meta.hpp  proxy_ref.hpp  proxy_tags.hpp  save_size.hpp  sequence_tuple.hpp  serialization_tag.hpp  stream_proxies.hpp  tags.hpp  traits.hpp  tstring.hpp  unpack.hpp  util_macros.hpp  visit_members.hpp
include/carbon/format/: binary.hpp  json.hpp
include/carbon/format/detail/: json_impl.hpp
include/carbon/io/: io_tag.hpp  memory.hpp  stream.hpp  unchecked_memory.hpp
test/: CMakeLists.txt  macro_generator.cpp  main.cpp
